scrollbar-fixed

--- a/style.css
+++ b/style.css
@@ -53,8 +53,7 @@ header nav div{
 /*********MAIN***********/
 
 main{
-    height: calc(100vh - 250px);
-    margin: 40px 95px;
+    height: calc(100vh - 170px);
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
